@@ -1,5 +1,5 @@
 group 'be.bluexin'
-version '1.0-SNAPSHOT'
+version "$version_number.$build_number"
 
 buildscript {
     repositories {
@@ -13,6 +13,7 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'kotlin'
 apply plugin: 'maven'
+apply plugin: 'application'
 
 sourceCompatibility = 1.8
 
@@ -27,9 +28,10 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-runtime:${kotlin_version}"
     compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:${coroutines_version}"
     compile "org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:${coroutines_version}"
+    compile "org.jetbrains.kotlinx:kotlinx-coroutines-nio:${coroutines_version}"
 }
 
-task sourceJar(type: Jar, dependsOn: "sourceMainJava", overwrite: true) {
+task sourceJar(type: Jar, overwrite: true) {
     from "src/main/java"
     from "src/test/java"
     from "src/main/kotlin"
@@ -40,6 +42,9 @@ task sourceJar(type: Jar, dependsOn: "sourceMainJava", overwrite: true) {
 artifacts {
     archives sourceJar
 }
+
+mainClassName = "be.bluexin.generation.Main"
+applicationDefaultJvmArgs = ["-Xverify:none"]
 
 task uploadArchives {
     repositories {
@@ -69,3 +74,5 @@ compileKotlin {
         jvmTarget = 1.8
     }
 }
+
+build.dependsOn(installDist)
